// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<div
  className="navbar-context-branches"
>
  <div
    className="dropdown"
  >
    <Toggler
      onRequestClose={[Function]}
      open={false}
      overlay={
        <ComponentNavBranchesMenu
          branchLikes={
            Array [
              Object {
                "isMain": true,
                "name": "master",
              },
              Object {
                "isMain": false,
                "name": "foo",
                "type": "LONG",
              },
            ]
          }
          canAdmin={undefined}
          component={Object {}}
          currentBranchLike={
            Object {
              "isMain": true,
              "name": "master",
            }
          }
          onClose={[Function]}
        />
      }
    >
      <a
        className="link-base-color link-no-underline nowrap"
        href="#"
        onClick={[Function]}
      >
        <BranchIcon
          branchLike={
            Object {
              "isMain": true,
              "name": "master",
            }
          }
          className="little-spacer-right"
        />
        <Tooltip
          mouseEnterDelay={1}
          overlay="master"
        >
          <span
            className="text-limited text-top"
          >
            master
          </span>
        </Tooltip>
        <i
          className="icon-dropdown little-spacer-left"
        />
      </a>
    </Toggler>
  </div>
</div>
`;

exports[`renders no branch support popup 1`] = `
<DocTooltip
  className="spacer-left"
  doc="branches/no-branch-support"
>
  <PlusCircleIcon
    fill="#b4b4b4"
    size={12}
  />
</DocTooltip>
`;

exports[`renders pull request 1`] = `
<div
  className="navbar-context-branches"
>
  <div
    className="dropdown"
  >
    <Toggler
      onRequestClose={[Function]}
      open={false}
      overlay={
        <ComponentNavBranchesMenu
          branchLikes={
            Array [
              Object {
                "base": "master",
                "branch": "feature",
                "key": "1234",
                "title": "Feature PR",
                "url": "https://example.com/pull/1234",
              },
              Object {
                "isMain": false,
                "name": "foo",
                "type": "LONG",
              },
            ]
          }
          canAdmin={undefined}
          component={Object {}}
          currentBranchLike={
            Object {
              "base": "master",
              "branch": "feature",
              "key": "1234",
              "title": "Feature PR",
              "url": "https://example.com/pull/1234",
            }
          }
          onClose={[Function]}
        />
      }
    >
      <a
        className="link-base-color link-no-underline nowrap"
        href="#"
        onClick={[Function]}
      >
        <BranchIcon
          branchLike={
            Object {
              "base": "master",
              "branch": "feature",
              "key": "1234",
              "title": "Feature PR",
              "url": "https://example.com/pull/1234",
            }
          }
          className="little-spacer-right"
        />
        <Tooltip
          mouseEnterDelay={1}
          overlay="1234 – Feature PR"
        >
          <span
            className="text-limited text-top"
          >
            1234 – Feature PR
          </span>
        </Tooltip>
        <i
          className="icon-dropdown little-spacer-left"
        />
      </a>
    </Toggler>
  </div>
  <span
    className="note big-spacer-left text-ellipsis flex-shrink"
  >
    <FormattedMessage
      defaultMessage="branches.pull_request.for_merge_into_x_from_y"
      id="branches.pull_request.for_merge_into_x_from_y"
      values={
        Object {
          "base": <strong>
            master
          </strong>,
          "branch": <strong>
            feature
          </strong>,
        }
      }
    />
  </span>
</div>
`;

exports[`renders short-living branch 1`] = `
<div
  className="navbar-context-branches"
>
  <div
    className="dropdown"
  >
    <Toggler
      onRequestClose={[Function]}
      open={false}
      overlay={
        <ComponentNavBranchesMenu
          branchLikes={
            Array [
              Object {
                "isMain": false,
                "mergeBranch": "master",
                "name": "foo",
                "status": Object {
                  "bugs": 0,
                  "codeSmells": 0,
                  "qualityGateStatus": "OK",
                  "vulnerabilities": 0,
                },
                "type": "SHORT",
              },
              Object {
                "isMain": false,
                "name": "foo",
                "type": "LONG",
              },
            ]
          }
          canAdmin={undefined}
          component={Object {}}
          currentBranchLike={
            Object {
              "isMain": false,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 0,
                "codeSmells": 0,
                "qualityGateStatus": "OK",
                "vulnerabilities": 0,
              },
              "type": "SHORT",
            }
          }
          onClose={[Function]}
        />
      }
    >
      <a
        className="link-base-color link-no-underline nowrap"
        href="#"
        onClick={[Function]}
      >
        <BranchIcon
          branchLike={
            Object {
              "isMain": false,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 0,
                "codeSmells": 0,
                "qualityGateStatus": "OK",
                "vulnerabilities": 0,
              },
              "type": "SHORT",
            }
          }
          className="little-spacer-right"
        />
        <Tooltip
          mouseEnterDelay={1}
          overlay="foo"
        >
          <span
            className="text-limited text-top"
          >
            foo
          </span>
        </Tooltip>
        <i
          className="icon-dropdown little-spacer-left"
        />
      </a>
    </Toggler>
  </div>
  <span
    className="note big-spacer-left"
  >
    from
     
    <strong>
      master
    </strong>
  </span>
</div>
`;

exports[`renders single branch popup 1`] = `
<DocTooltip
  className="spacer-left"
  doc="branches/single-branch"
>
  <PlusCircleIcon
    fill="#4b9fd5"
    size={12}
  />
</DocTooltip>
`;
